<resources>
    <string name="app_name">Calculator MVC</string>

    <!--    button   -->
    <string name="btn_ac">AC</string>
    <string name="btn_sign">±</string>
    <string name="btn_mod">%</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_sub">−</string>
    <string name="btn_add">+</string>
    <string name="btn_dot">.</string>
    <string name="btn_result">=</string>

    <!--    number   -->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <!--    result   -->
    <string name="default_result">0</string>
</resources>