<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_formula"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/gray_70"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:background="@color/gray_90"
            android:text="@string/default_result"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_formula" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ====== row 0 ====== -->

    <TextView
        android:id="@+id/btn_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_ac"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_7"
        app:layout_constraintEnd_toStartOf="@id/btn_sign"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen" />

    <TextView
        android:id="@+id/btn_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_sign"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/num_8"
        app:layout_constraintEnd_toStartOf="@id/btn_mod"
        app:layout_constraintStart_toEndOf="@id/btn_ac"
        app:layout_constraintTop_toBottomOf="@id/screen" />

    <TextView
        android:id="@+id/btn_mod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_mod"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/num_9"
        app:layout_constraintEnd_toStartOf="@id/btn_div"
        app:layout_constraintStart_toEndOf="@id/btn_sign"
        app:layout_constraintTop_toBottomOf="@id/screen" />

    <TextView
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_div"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_mod"
        app:layout_constraintTop_toBottomOf="@id/screen" />

    <!-- ====== row 1 ====== -->

    <TextView
        android:id="@+id/num_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_7"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_4"
        app:layout_constraintEnd_toStartOf="@id/num_8"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ac" />

    <TextView
        android:id="@+id/num_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_8"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_5"
        app:layout_constraintEnd_toStartOf="@id/num_9"
        app:layout_constraintStart_toEndOf="@id/num_7"
        app:layout_constraintTop_toBottomOf="@id/btn_sign" />

    <TextView
        android:id="@+id/num_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_9"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_6"
        app:layout_constraintEnd_toStartOf="@id/btn_mul"
        app:layout_constraintStart_toEndOf="@id/num_8"
        app:layout_constraintTop_toBottomOf="@id/btn_div" />

    <TextView
        android:id="@+id/btn_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_mul"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/btn_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num_9"
        app:layout_constraintTop_toBottomOf="@id/btn_div" />

    <!-- ====== row 2 ====== -->

    <TextView
        android:id="@+id/num_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_4"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_1"
        app:layout_constraintEnd_toStartOf="@id/num_5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_7" />

    <TextView
        android:id="@+id/num_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_5"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_2"
        app:layout_constraintEnd_toStartOf="@id/num_6"
        app:layout_constraintStart_toEndOf="@id/num_4"
        app:layout_constraintTop_toBottomOf="@id/num_8" />

    <TextView
        android:id="@+id/num_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_6"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_3"
        app:layout_constraintEnd_toStartOf="@id/btn_sub"
        app:layout_constraintStart_toEndOf="@id/num_5"
        app:layout_constraintTop_toBottomOf="@id/num_9" />

    <TextView
        android:id="@+id/btn_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_sub"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num_6"
        app:layout_constraintTop_toBottomOf="@id/btn_mul" />

    <!-- ====== row 3 ====== -->

    <TextView
        android:id="@+id/num_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_0"
        app:layout_constraintEnd_toStartOf="@id/num_2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_4" />

    <TextView
        android:id="@+id/num_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/num_0"
        app:layout_constraintEnd_toStartOf="@id/num_3"
        app:layout_constraintStart_toEndOf="@id/num_1"
        app:layout_constraintTop_toBottomOf="@id/num_5" />

    <TextView
        android:id="@+id/num_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/num_2"
        app:layout_constraintTop_toBottomOf="@id/num_6" />

    <TextView
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_add"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/btn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num_3"
        app:layout_constraintTop_toBottomOf="@id/btn_sub" />

    <!-- ====== row 4 ====== -->

    <TextView
        android:id="@+id/num_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/num_0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_1" />

    <TextView
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_number"
        android:gravity="center"
        android:text="@string/btn_dot"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_result"
        app:layout_constraintStart_toEndOf="@id/num_0"
        app:layout_constraintTop_toBottomOf="@id/num_3" />


    <TextView
        android:id="@+id/btn_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tv_button"
        android:gravity="center"
        android:text="@string/btn_result"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

</androidx.constraintlayout.widget.ConstraintLayout>